# transluce-pathological-behaviors

./: .gitignore  README.md  judge.sh  prepare.sh  prepare_data.py  pyproject.toml  run_test.sh  run_viewer.sh  setup.sh  start_servers.sh  target.sh  test_pipeline.py  viewer.py
.ray_tmp/ray/: session_latest
config/: grpo_jailbreak.yaml
configs/: general.yml  run_config.yaml
datasets/: transluce_cbrn.jsonl
outputs/2026-02-24/17-03-06/.hydra/: hydra.yaml
outputs/2026-02-24/17-04-20/.hydra/: hydra.yaml
outputs/2026-02-24/17-05-44/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-24/17-07-34/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-24/17-11-39/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-02-24/17-14-50/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-24/17-18-29/.hydra/: hydra.yaml
outputs/2026-02-24/17-20-01/.hydra/: hydra.yaml
outputs/2026-02-24/17-22-15/.hydra/: hydra.yaml
outputs/2026-02-24/17-24-20/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-24/17-31-56/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-24/17-33-26/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-24/17-36-34/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-24/17-45-47/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-24/17-46-23/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-24/17-48-51/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-02-24/17-52-17/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-24/17-55-13/.hydra/: hydra.yaml
outputs/2026-02-24/17-57-49/.hydra/: hydra.yaml
outputs/2026-02-24/17-58-28/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-02-24/18-25-14/.hydra/: hydra.yaml
outputs/2026-02-24/18-28-15/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-24/18-33-09/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-24/18-36-04/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-02-24/18-37-33/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-24/18-42-38/.hydra/: hydra.yaml
outputs/2026-02-24/18-46-13/.hydra/: hydra.yaml
outputs/2026-02-24/18-50-34/.hydra/: hydra.yaml
outputs/2026-02-24/18-59-11/.hydra/: hydra.yaml
outputs/2026-02-24/19-06-54/.hydra/: hydra.yaml
outputs/2026-02-24/19-15-38/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-24/19-25-26/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-02-24/19-28-42/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-02-24/19-34-49/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-02-24/19-42-38/.hydra/: config.yaml  hydra.yaml
prepared/: test.parquet  train.parquet
reward_logs/: 110979.jsonl  110990.jsonl  111084.jsonl  111244.jsonl  111352.jsonl  111410.jsonl  111466.jsonl  111522.jsonl  24572.jsonl  24593.jsonl  24767.jsonl  24780.jsonl  24861.jsonl  24923.jsonl  24982.jsonl  25234.jsonl  258467.jsonl  258684.jsonl  258730.jsonl  258791.jsonl  258879.jsonl  258935.jsonl  259143.jsonl  261407.jsonl
src/: async_utils.py  client_utils.py  data.py  env.py  logprobs.py  prompts.py  reward.py  reward_manager.py  reward_wrapper.py  train.py  utils.py
(+45 files in other folders)
