[project]
name = "transluce-pathological-behaviors"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "chz",
    "msgspec",
    "anyio",
    "openai",
    "numpy",
    "transformers",
    "tenacity",
    "jinja2",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", "**/.venv", "**/venv"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"