[project]
name = "transluce-pathological-behaviors"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "chz",
    "msgspec",
    "anyio",
    "openai",
    "numpy",
    "transformers",
    "tenacity",
    "jinja2",
    "rich",
    "verl>=0.4.1",
    "vllm==0.6.3",
    "flash-attn>=2.8.3",
    "pyairports>=0.0.1",
    "airports>=0.1.2",
    "outlines[all]>=0.0.46",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.4cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", "**/.venv", "**/venv"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
