[project]
name = "transluce-pathological-behaviors"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "vllm==0.11.0",
    "transformers[hf_xet]>=4.51.0",
    "accelerate",
    "datasets",
    "peft",
    "hf-transfer",
    "numpy<2.0.0",
    "pyarrow>=15.0.0",
    "pandas",
    "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
    "torchdata",
    "ray[default]",
    "codetiming",
    "hydra-core",
    "pylatexenc",
    "qwen-vl-utils",
    "wandb",
    "dill",
    "pybind11",
    "liger-kernel",
    "mathruler",
    "pytest",
    "py-spy",
    "pre-commit",
    "ruff",
    "tensorboard",
    "nvidia-ml-py>=12.560.30",
    "fastapi[standard]>=0.115.0",
    "optree>=0.13.0",
    "pydantic>=2.9",
    "grpcio>=1.62.1",
    "flash-attn",
    "flashinfer-python==0.3.1",
    "opencv-python",
    "opencv-fixer",
    "verl>=0.4.1",
    "chz",
    "msgspec",
    "anyio",
    "openai",
    "tenacity",
    "jinja2",
    "rich",
    "pyairports>=0.0.1",
    "airports>=0.1.2",
    "outlines[all]>=0.0.46",
    "streamlit==1.54.0",
]


[tool.uv.sources]
# This tells uv to use your specific URL instead of looking on PyPI
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.1/flash_attn-2.8.1+cu12torch2.8cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }